--- a/src/main/resources/templates/loan-request.html
+++ b/src/main/resources/templates/loan-request.html
@@ -57,6 +57,21 @@
             background-color: #0056b3;
             border-color: #004085;
         }
+
+        .form-group {
+            display: flex;
+            align-items: center;
+            margin-bottom: 1.5rem;
+        }
+
+        .form-group label {
+            flex: 1;
+            margin-right: 1rem;
+        }
+
+        .form-group .form-control {
+            flex: 2;
+        }
     </style>
 </head>
 
@@ -66,27 +81,27 @@
         <div class="form-container">
             <h2 class="form-header">Formulaire de Demande de Prêt</h2>
             <form th:action="@{/demande-pret}" th:object="${loanRequest}" method="post">
-                <div class="mb-4">
+                <div class="form-group">
                     <label for="montantPret" class="form-label">Montant du prêt</label>
                     <input type="number" id="montantPret" name="montantPret" class="form-control"
                         th:field="*{montantPret}" required>
                 </div>
-                <div class="mb-4">
+                <div class="form-group">
                     <label for="dureePret" class="form-label">Durée (mois)</label>
                     <input type="number" id="dureePret" name="dureePret" class="form-control" th:field="*{dureePret}"
                         required>
                 </div>
-                <div class="mb-4">
+                <div class="form-group">
                     <label for="statusId" class="form-label">Statut</label>
                     <input type="text" id="statusId" name="statusId" class="form-control" th:field="*{statusId}"
                         required>
                 </div>
-                <div class="mb-4">
+                <div class="form-group">
                     <label for="dateSoumission" class="form-label">Date de Soumission</label>
                     <input type="datetime-local" id="dateSoumission" name="dateSoumission" class="form-control"
                         th:field="*{dateSoumission}" required>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Soumettre</button>
+                <button type="submit" class="btn btn-primary w-100" style="text-align: center;">Soumettre</button>
             </form>
         </div>
     </div>
